--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Build static site
         run: python py_scripts/build_site.py
 
+      - name: List public dir  # <-- ajoute ici
+        run: ls -R public
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
