--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,11 @@
 name: Build and Deploy Blog
 
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: "0 0 * * *"   # Tous les jours à minuit UTC
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 permissions:
