--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *"   # tous les jours à minuit UTC
   workflow_dispatch:
 
 permissions:
-  contents: write   # nécessaire pour pouvoir pousser sur gh-pages
+  contents: write   # nécessaire pour pousser sur gh-pages
 
 jobs:
   build-deploy:
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0   # important pour peaceiris/actions-gh-pages
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -38,8 +40,10 @@ jobs:
           BASE_URL: /autoblog
         run: python py_scripts/build_site.py
 
-      - name: List public dir  # <-- ajoute ici
-        run: ls -R public
+      - name: Check generated files
+        run: |
+          echo "📂 Voici le contenu du dossier public :"
+          ls -R public
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -47,4 +51,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           publish_branch: gh-pages
-          keep_files: false   # Supprime les fichiers existants avant de publier
+          force_orphan: true   # ⚡ toujours repartir d’une branche propre
+          keep_files: false    # supprime tout avant déploiement
