--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,15 @@ jobs:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
         run: python py_scripts/generate_post.py
 
+      - name: Commit new posts to main
+        if: success()
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add content/*.md
+          git commit -m "chore: add new AI-generated post" || echo "No changes to commit"
+          git push origin main
+
       - name: Build static site
         env:
           BASE_URL: /autoblog
